calibre/01-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: calibre
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: msd117/librarium:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
      volumes:
      - name: config
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/calibre
      - name: books
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media/books
