calibre/02-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: calibre
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre
        image: crocodilestick/calibre-web-automated:V3.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /config
        - name: library
          mountPath: /calibre-library 
        - name: new-books
          mountPath: /cwa-book-ingest
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-config
      - name: library
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media/books/library
      - name: new-books
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/data/media/books/new
      tolerations:
      - key: "role"
        operator: "Equal"
        value: "node-s"
        effect: "NoSchedule"
