calibre/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: calibre
  ports:
    - name: web
      protocol: TCP
      port: 8083
      targetPort: 8083
