calibre/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calibre-ingress
  namespace: media
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`calibre.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: calibre-service
      port: web
